@@ -110,7 +110,7 @@ public class HiveMQNettyBootstrapTest {
         verify(shutdownHooks, atLeastOnce()).add(any(NettyShutdownHook.class));
 
         assertEquals(1, listenableFuture.get().size());
-        assertTrue(listenableFuture.get().get(0).isSuccessful());
+        assertTrue(listenableFuture.get().getFirst().isSuccessful());
     }
 
     @Test
@@ -124,7 +124,7 @@ public class HiveMQNettyBootstrapTest {
         verify(shutdownHooks, atLeastOnce()).add(any(NettyShutdownHook.class));
 
         assertEquals(1, listenableFuture.get().size());
-        assertTrue(listenableFuture.get().get(0).isSuccessful());
+        assertTrue(listenableFuture.get().getFirst().isSuccessful());
     }
 
     @Test
@@ -138,7 +138,7 @@ public class HiveMQNettyBootstrapTest {
         verify(shutdownHooks, atLeastOnce()).add(any(NettyShutdownHook.class));
 
         assertEquals(1, listenableFuture.get().size());
-        assertTrue(listenableFuture.get().get(0).isSuccessful());
+        assertTrue(listenableFuture.get().getFirst().isSuccessful());
     }
 
     @Test
@@ -152,7 +152,7 @@ public class HiveMQNettyBootstrapTest {
         verify(shutdownHooks, atLeastOnce()).add(any(NettyShutdownHook.class));
 
         assertEquals(1, listenableFuture.get().size());
-        assertTrue(listenableFuture.get().get(0).isSuccessful());
+        assertTrue(listenableFuture.get().getFirst().isSuccessful());
     }
 
     @Test
