@@ -103,9 +103,9 @@ public class ClientQueueMemoryLocalPersistenceTest {
         final ImmutableList<PUBLISH> publishes =
                 persistence.readNew("client1", false, ImmutableIntArray.of(2, 3, 4), 256000, 0);
         assertEquals(1, publishes.size());
-        assertEquals(2, publishes.get(0).getPacketIdentifier());
-        assertEquals(publish.getQoS(), publishes.get(0).getQoS());
-        assertEquals(publish.getTopic(), publishes.get(0).getTopic());
+        assertEquals(2, publishes.getFirst().getPacketIdentifier());
+        assertEquals(publish.getQoS(), publishes.getFirst().getQoS());
+        assertEquals(publish.getTopic(), publishes.getFirst().getTopic());
     }
 
     @Test
@@ -151,8 +151,8 @@ public class ClientQueueMemoryLocalPersistenceTest {
                 persistence.readNew("client1", false, ImmutableIntArray.of(5), 256000, 0);
 
         assertEquals(1, messages1.size());
-        assertEquals(5, messages1.get(0).getPacketIdentifier());
-        assertEquals("topic0", messages1.get(0).getTopic());
+        assertEquals(5, messages1.getFirst().getPacketIdentifier());
+        assertEquals("topic0", messages1.getFirst().getTopic());
 
         final ImmutableIntArray packetIds = ImmutableIntArray.of(2, 3, 4);
         final ImmutableList<PUBLISH> messages2 = persistence.readNew("client1", false, packetIds, 256000, 0);
@@ -391,7 +391,7 @@ public class ClientQueueMemoryLocalPersistenceTest {
         assertNull(uniqueId);
         final ImmutableList<MessageWithID> messages = persistence.readInflight("client", false, 10, byteLimit, 0);
         assertEquals(1, messages.size());
-        assertEquals(1, messages.get(0).getPacketIdentifier());
+        assertEquals(1, messages.getFirst().getPacketIdentifier());
     }
 
     @Test
@@ -437,7 +437,7 @@ public class ClientQueueMemoryLocalPersistenceTest {
         assertNull(uniqueId);
         final ImmutableList<MessageWithID> messages = persistence.readInflight("client", false, 10, byteLimit, 0);
         assertEquals(1, messages.size());
-        assertEquals(1, messages.get(0).getPacketIdentifier());
+        assertEquals(1, messages.getFirst().getPacketIdentifier());
     }
 
     @Test
@@ -779,7 +779,7 @@ public class ClientQueueMemoryLocalPersistenceTest {
         final ImmutableList<PUBLISH> newMessages =
                 persistence.readNew("client1", false, ImmutableIntArray.of(1), 10000L, 0);
         assertEquals(1, newMessages.size());
-        assertEquals("topic2", newMessages.get(0).getTopic());
+        assertEquals("topic2", newMessages.getFirst().getTopic());
 
         final ImmutableSet<String> sharedQueues = persistence.cleanUp(0);
 
@@ -1029,7 +1029,7 @@ public class ClientQueueMemoryLocalPersistenceTest {
         assertEquals(1, messages.size());
 
         assertTrue(gauge.getValue() > 0);
-        assertEquals(new PublishWithRetained(messages.get(0), false).getEstimatedSize() +
+        assertEquals(new PublishWithRetained(messages.getFirst(), false).getEstimatedSize() +
                 ObjectMemoryEstimation.linkedListNodeOverhead(), gauge.getValue().longValue());
     }
 
@@ -1304,7 +1304,7 @@ public class ClientQueueMemoryLocalPersistenceTest {
                 metricRegistry.getGauges().get(HiveMQMetrics.QUEUED_MESSAGES_MEMORY_PERSISTENCE_TOTAL_SIZE.name());
         assertTrue(gauge.getValue() > 0);
 
-        int byteLimit = totalPublishBytes / 2;
+        final int byteLimit = totalPublishBytes / 2;
         final ImmutableList<PUBLISH> allReadPublishes =
                 persistence.readNew("client", false, createPacketIds(1, 100), byteLimit, 0);
         assertEquals(51, allReadPublishes.size());
@@ -1338,7 +1338,7 @@ public class ClientQueueMemoryLocalPersistenceTest {
                 metricRegistry.getGauges().get(HiveMQMetrics.QUEUED_MESSAGES_MEMORY_PERSISTENCE_TOTAL_SIZE.name());
         assertTrue(gauge.getValue() > 0);
 
-        int byteLimit = totalPublishBytes / 2;
+        final int byteLimit = totalPublishBytes / 2;
         System.out.println(byteLimit);
         final ImmutableList<PUBLISH> allReadPublishes =
                 persistence.readNew("client", false, createPacketIds(1, 100), byteLimit, 0);
@@ -1382,7 +1382,7 @@ public class ClientQueueMemoryLocalPersistenceTest {
                 metricRegistry.getGauges().get(HiveMQMetrics.QUEUED_MESSAGES_MEMORY_PERSISTENCE_TOTAL_SIZE.name());
         assertTrue(gauge.getValue() > 0);
 
-        int byteLimit = totalPublishBytes / 2;
+        final int byteLimit = totalPublishBytes / 2;
         final ImmutableList<PUBLISH> allReadPublishes =
                 persistence.readNew("client", false, createPacketIds(1, 100), byteLimit, 0);
         assertEquals(51, allReadPublishes.size());
